# RP2040_DevTools

./: 0_build_sdk.bat  1_build_ide.bat  README.md  x_build_debugprobe.bat  x_build_sdk_tools.bat
data/: unzip.py
data/build_ide/: pi2040_def_env.vsix  settings.json  state.vscdb
data/build_sdk/: CMakeLists.txt  SetEnv.bat  create_lib.py  debugprobe_on_pico.uf2
data/build_sdk/def_project/increment/: Makefile  clean.bat  make.bat
data/build_sdk/def_project/increment/src/: NeoPixelConnect.cpp  NeoPixelConnect.h  WS2812.pio  main.cpp
data/build_sdk/def_project/simple/: Makefile  clean.bat  make.bat
